[MS] Fix video viewer on Firefox

--- a/client/src/theme/global.scss
+++ b/client/src/theme/global.scss
@@ -19,6 +19,11 @@ ion-title {
   padding: 0;
 }
 
+svg {
+  width: 100%;
+  height: 100%;
+}
+
 .scroll {
   overflow-y: auto;
   overflow-x: hidden;
